# TGFloofBot

./: .gitignore  README.md  alembic.ini  config.yaml.sample  entrypoint.py  main.py  mypy.ini  pyproject.toml
db_migrations/: env.py
modules/: __init__.py  utilities.py
services/: __init__.py  bot_init.py  decorators.py
tgfloofbot/: __init__.py  client.py  constants.py  exceptions.py  helpers.py  loader.py  logger.py  main.py  models.py
tgfloofbot/plugins/: __init__.py
tgfloofbot/plugins/administration/: __init__.py  commands.py  exceptions.py  models.py
tgfloofbot/plugins/extra/: __init__.py  commands.py  exceptions.py
